...
enum _LibraryPreviewMovementDirection { backward, idle, forward }

class _LibraryGalleryScrollViewKey extends GlobalObjectKey {
  const _LibraryGalleryScrollViewKey(super.value);

  @override
  String toString() => "[<'library-photo-wall'>]";
}

class LibraryGalleryWall extends StatelessWidget {
  const LibraryGalleryWall({
    required this.state,
    required this.controller,
...
