...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final preferences = ref.watch(amePreferencesControllerProvider);
    return ColoredBox(
      color: Theme.of(context).colorScheme.surfaceContainerLowest,
      child: CustomScrollView(
        key: const Key("ame-settings-page"),
        slivers: [
          SliverPadding(
            padding: const EdgeInsets.fromLTRB(32, 24, 32, 64),
            sliver: SliverToBoxAdapter(
              child: Center(
                child: ConstrainedBox(
...
